<resources>
    <string name="app_name">kotlin-interest</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_username">Username</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="dialogs">Dialogs</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">NavHeaderDescr</string>
    <string name="sign_up">Sign up</string>
    <string name="signup_text">Not a member? Sign up now</string>
    <string name="prompt_age">Age</string>
    <string name="male_rb">Male</string>
    <string name="female_rb">Female</string>
    <string name="prompt_description">Tell about yourself</string>
    <string name="next">Next</string>
    <string name="profile">Profile</string>
    <string name="choose_your_interests">Choose your interests (at least 3)</string>
    <string name="interests">Interests</string>
    <string name="about_me">About me</string>
    <string name="log_out">Log out</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="history">History</string>
    <string name="no_users_left">No users left :(</string>
    <string name="filters">Filters</string>
    <string name="apply">Apply</string>
</resources>
