<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home" />
        <item
            android:id="@+id/nav_dialogs"
            android:title="@string/dialogs"
            android:icon="@drawable/ic_dialogs"/>

        <item
            android:id="@+id/nav_history"
            android:title="@string/history"
            android:icon="@drawable/ic_history"/>

        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_profile"/>

    </group>
</menu>